--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vue-the-mask": "^0.11.1",
-    "vuetify": "^3.7.12"
+    "vuetify": "^3.7.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
